fix(command-center): fix agent popup styling and task creation
- Add backdrop overlay for proper modal behavior
- Increase popup z-index to 10000 for proper stacking
- Use hardcoded colors instead of CSS variables (scope issue)
- Fix Codex logo (use codex.svg instead of missing chatgpt.png)
- Fix Create Task button visibility with proper pink background
- Fix CreateAgentSession payload (prompt field + required defaults)

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1363,6 +1363,7 @@
       </section>
 
       <!-- Agent Task Popup (for Command Center) -->
+      <div class="command-agent-popup-backdrop" id="commandAgentPopupBackdrop" hidden></div>
       <div class="command-agent-popup" id="commandAgentPopup" hidden>
         <div class="command-agent-popup-header">
           <span class="command-agent-popup-title">
@@ -1385,7 +1386,7 @@
               <span class="command-agent-option-name">Claude</span>
             </div>
             <div class="command-agent-option" data-agent="codex">
-              <img src="images/chatgpt.png" alt="Codex" onerror="this.style.display='none'">
+              <img src="images/codex.svg" alt="Codex">
               <span class="command-agent-option-name">Codex</span>
             </div>
             <div class="command-agent-option" data-agent="amp">
