fix(codex): address PR review feedback

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1578,7 +1578,7 @@
                       placeholder="default"
                     />
                     <small class="text-muted d-block mt-2">
-                      Synced to the active Codex account's <code>CODEX_HOME/config.toml</code>.
+                      Read from the active Codex account's <code>CODEX_HOME/config.toml</code>.
                     </small>
                   </div>
 
