--- a/gui/menu.html
+++ b/gui/menu.html
@@ -2018,6 +2018,29 @@
                   </div>
                 </div>
 
+                <div class="task-scheduler-prompt-block">
+                  <div class="task-scheduler-prompt-header">
+                    <div class="task-scheduler-prompt-title">Prompt</div>
+                    <div class="task-scheduler-prompt-actions">
+                      <button class="btn btn-outline-secondary btn-sm" id="taskSchedulerUseDraftPromptBtn" type="button">
+                        Use draft
+                      </button>
+                      <button class="btn btn-outline-secondary btn-sm" id="taskSchedulerCopyPromptBtn" type="button">
+                        <i class="fal fa-copy"></i>
+                      </button>
+                    </div>
+                  </div>
+                  <textarea
+                    id="taskSchedulerPromptPreview"
+                    class="task-scheduler-prompt-textarea"
+                    readonly
+                    placeholder="(Uses the current Create Tasks prompt when you save a new schedule.)"
+                  ></textarea>
+                  <div class="task-scheduler-prompt-note">
+                    Edit the draft prompt in the Create Tasks box. Existing schedules keep their saved prompt unless you click “Use draft”.
+                  </div>
+                </div>
+
                 <div class="form-group mb-2">
                   <label class="muted-label" for="taskSchedulerNameInput">Name</label>
                   <input
