feat(ui): edit scheduler prompt in modal

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -2033,11 +2033,10 @@
                   <textarea
                     id="taskSchedulerPromptPreview"
                     class="task-scheduler-prompt-textarea"
-                    readonly
                     placeholder="(Uses the current Create Tasks prompt when you save a new schedule.)"
                   ></textarea>
                   <div class="task-scheduler-prompt-note">
-                    Edit the draft prompt in the Create Tasks box. Existing schedules keep their saved prompt unless you click “Use draft”.
+                    You can edit the prompt here. Click “Use draft” to pull in the current Create Tasks prompt.
                   </div>
                 </div>
 
